# django-useful-rebase

./: LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  update.bat
django_useful_rebase/: apps.py
django_useful_rebase/admin/: __init__.py  field_admin_base.py  inline_model_base.py  model_admin_base.py
django_useful_rebase/forms/: __init__.py  model_base.py  model_form_base.py
django_useful_rebase/serializers/: __init__.py  validator_base_serializer.py
django_useful_rebase/validators/: __init__.py  validator_base.py
