[metadata]
name = django-useful-rebase
version = 0.2
description = A Django app to to add useful behaviour and control to django base models.
long_description = file: README.rst
url = https://github.com/daniel-couto/django-useful-rebase
author = Daniel Couto
author_email = python-dev@danielcouto.me
license = BSD license  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django >= 5.0  # Replace "X.Y" as appropriate

